# Cthulhu

./: .gitignore  Cargo.toml  README.MD  angel.toml  build_deb.sh  flake.nix  netbox.toml  octhulhu.toml  provision.toml  telnet.toml  upload.sh
angel/: Cargo.toml
angel-sm/src/: action.rs  builder.rs  lib.rs  process.rs
angel-sm/src/states/: arista.hcl  arista_provision.hcl  junos_common.hcl  junos_provision.hcl  legacy_junos.hcl  modern_junos.hcl  provision.hcl  recover.hcl
angel/debian/: cthulhu-angel@.service
angel/src/: job.rs  main.rs  mqtt.rs
common/src/: devinfo.rs  job.rs  lib.rs  status.rs
config/: Cargo.toml
config/src/: angel.rs  heaven.rs  lib.rs  netbox.rs  octhulhu.rs  provision.rs
cthulhu-netbox/: Cargo.toml
cthulhu-netbox/debian/: cthulhu-netbox.service
cthulhu-netbox/src/: main.rs
cthulhu-provision/: Cargo.toml  askama.toml
cthulhu-provision/debian/: cthulhu-provision.service
cthulhu-provision/src/: main.rs  state.rs
cthulhu-provision/src/arista/: mod.rs
cthulhu-provision/src/arista/assets/: autoreload.py
cthulhu-provision/src/juniper/: mod.rs
cthulhu-provision/src/juniper/assets/: autoreload.sh
cthulhu-provision/templates/: arista-stage1.sh  arista-stage2-os-change.sh  arista-stage2.sh  junos-stage1.sh  junos-stage2-os-change.sh  junos-stage2.sh
docs/: setup.md
heaven/: Cargo.toml  build.rs
heaven/debian/: cthulhu-heaven.service
heaven/src/: main.rs  manager.rs  mqtt.rs
heaven/src/web/: helpers.rs  mod.rs  pages.rs  serial.rs  tera.rs
heaven/src/web/assets/css/: index.css  port.css
heaven/src/web/assets/js/: index.js  port.js
heaven/src/web/pages/: index.rs  mod.rs  port.rs
heaven/src/web/templates/: index.html  port.html
octhulhu-agent/: Cargo.toml
octhulhu-agent/debian/: octhulhu-agent.service
octhulhu-agent/src/: args.rs  main.rs  serial.rs
octhulhu-agent/src/daemon/: mod.rs  tracker.rs
octhulhu-agent/src/serial/: discovery.rs  mod.rs
src/switch/: mod.rs
src/switch/worker/: state.rs
src/web/: manager.rs  mod.rs  pages.rs
src/web/templates/: index.html
