[package]
name = "cthulhu-provision"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
color-eyre = "0.6.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.50", features = ["derive"] }
cthulhu-config = { path = "../config" }
askama = "0.14.0"
mime_guess = "2.0.5"
include_dir = "0.7.4"
url = "2.5.7"
axum-extra = "0.12.1"
reqwest = "0.12.24"
tower-http = { version = "0.6.7", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.17", features = ["io"] }
