[package]
name = "cthulhu-provision"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6" }
color-eyre = "0.6.5"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
clap = { version = "4.5.50", features = ["derive"] }
cthulhu-config = { path = "../config" }
askama = "0.14.0"
mime_guess = "2.0.5"
include_dir = "0.7.4"
axum-extra = "0.12.1"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls-webpki-roots", "http2"], default-features = false }
tower-http = { version = "0.6.7", features = ["trace"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio-util = { version = "0.7.17", features = ["io"] }

[package.metadata.deb]
maintainer = "Roelf Wichertjes <contact@roelf.org>"
copyright = "2025, Roelf Wichertjes <contact@roelf.org>"
license-file = ["../LICENSE", "4"]
extended-description = """\
Provide provisioning configs."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cthulhu-provision", "usr/bin/", "755"],
    { source = "../provision.toml", dest = "/etc/cthulhu/provision.toml.example", mode = "644"},
]
maintainer-scripts = "debian/"
systemd-units = { unit-name = "cthulhu-provision", enable = false, stop-on-upgrade = true, restart-after-upgrade = true, start = false }

